# MindBridge

./: .gitmodules  LICENSE  archive.py  readme.md  registry.toml  requirements.txt  router.py
coral-server/: build.gradle.kts
coral-server/agents/reception/: coral-agent.toml  coral_agent.py  main.py  pyproject.toml  run_agent.sh
coral-server/examples/camel-search-maths/interface/: coral-agent.toml
coral-server/src/main/resources/: registry.toml
